# mafia

./: .cmake-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: clang_format.cmake  cmake_format.cmake  print_files.cmake  project.hpp.in  warnings.cmake
